# wordle-python

./: README.md  data.py  exceptions.py  game.py  guess.py  results.json  results.txt  setup.cfg  test_guess.py
src/wordle/: data.py  game.py  guess.py  load_words.py
