[metadata]
name = wordle-robertyounghome
version = 0.0.20
author = Robert (Bob) Young
author_email = robertyounghome@gmail.com
description = Wordle game package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robertyounghome/wordle-python
project_urls =
    Bug Tracker = https://github.com/robertyounghome/wordle-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src